[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous_mower"
version = "0.1.0"
description = "An autonomous lawn mower control system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "adafruit-blinka==8.58.1",
    "adafruit-circuitpython-bme280==2.6.28",
    "adafruit-circuitpython-bno08x==1.2.9",
    "adafruit-circuitpython-busdevice==5.2.12",
    "adafruit-circuitpython-connectionmanager==3.1.4",
    "adafruit-circuitpython-ina3221==1.2.0",
    "adafruit-circuitpython-mpu6050==1.3.3; sys_platform == 'linux'",
    "adafruit-circuitpython-register==1.10.3",
    "adafruit-circuitpython-requests==4.1.12",
    "adafruit-circuitpython-typing==1.12.1",
    "adafruit-circuitpython-vl53l0x==3.6.15",
    "adafruit-platformdetect==3.79.0",
    "adafruit-pureio==1.1.11",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "bandit==1.8.3",
    "colorama>=0.4.4",
    "flask>=3.0.0",
    "flask-babel==4.0.0",
    "flask-cors==6.0.0",
    "flask-socketio>=5.3.3",
    "eventlet>=0.36.0",
    "geopy>=2.1.0",
    "gpsd-py3==0.3.0",
    "imutils>=0.5.4",
    "networkx>=2.6.0",
    "numpy>=1.24,<1.27",
    "opencv-python-headless>=4.8.1.78",
    "pathfinding>=1.0.0",
    "pillow>=10.3.0",
    "prometheus-client>=0.22.1",
    "psutil>=6.0.0",
    "py3nvml==0.2.7",
    "pynmea2==1.19.0",
    "pyopenssl==25.1.0",
    "pyserial>=3.5",
    "python-daemon==3.1.2",
    "python-dotenv>=1.0.0",
    "pyudev==0.24.3",
    "pyyaml>=6.0.2",
    "readchar==4.2.1",
    "requests>=2.32.4",
    "rpi-gpio==0.7.1; sys_platform == 'linux'",
    "rtree>=1.0.0",
    "safety==3.5.2",
    "scipy==1.15.3",
    "shapely>=2.0.0",
    "smbus2==0.5.0",
    "statsd==4.0.1",
    "supervisor==4.2.5",
    "systemd-python==235",
    "tflite-runtime>=2.5.0",
    "ultralytics==8.3.151",
    "utm==0.8.1",
    "watchdog>=5.0.0",
]

[project.optional-dependencies]
coral = [
    "tflite-runtime>=2.5.0",
]
ddns = [
    "requests>=2.26.0",
    "schedule>=1.1.0",
]
cloudflare = [
    "cloudflare>=2.8.0",
    "cryptography>=3.4.0",
]
ssl = [
    "certbot>=1.12.0",
    "cryptography>=3.4.0",
]
dev = [
    "black>=24.3.0",
    "flake8>=3.9.0",
    "isort>=5.12.0",
    "mypy>=0.910",
    "pylint>=2.17.0",
    "pre-commit>=2.15.0",
]
test = [
    "Flask-Cors>=5.0.1",
    "pydantic>=2.6.0",
    "scipy>=1.10.1",
    "tensorflow>=2.19.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "systemd-python>=234; sys_platform == 'linux'",
    "python-daemon>=3.0.1",
    "supervisor>=4.2.5",
    "prometheus_client>=0.17.0",
    "pynmea2>=1.18.0",
    "utm>=0.7.0",
    "safety>=3.2.14",
    "bandit>=1.7.5",
    "pyOpenSSL>=23.0.0",
    "certifi>=2024.7.4",
    "grafana-client>=2.3.0; sys_platform == 'linux'",
    "statsd>=4.0.1",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
    "setuptools>=69.0.0",
    "wheel>=0.42.0",
]

[project.scripts]
mower = "mower.main_controller:main"
mower-test = "mower.diagnostics.hardware_test:main"
mower-calibrate = "mower.diagnostics.imu_calibration:main"
mower-logs = "mower.utilities.logging_config:view_logs"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", ".git", ".tox", "build", "dist"]
skips = ["B101", "B104", "B311"]

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.autopep8]
max_line_length = 120
line_length = 120
args = [
    "--in-place",
    "--max-line-length=120",
    "--aggressive",
    "--aggressive",
    "--aggressive",
    "--aggressive",
    "--aggressive",
    "--aggressive",
    "--experimental",
]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip_glob = ["venv/*", ".venv/*", ".git/*", ".tox/*", "build/*", "dist/*"]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "D100", "D104"]
